--- a/PayPalDonateButton.html
+++ b/PayPalDonateButton.html
@@ -1,6 +1,6 @@
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick" />
 <input type="hidden" name="hosted_button_id" value="YK6G79KLWXUU4" />
-<input type="image" src="http://puu.sh/FCwwZ/907740fc50.png" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+<input type="image" src="http://puu.sh/FCwwZ/907740fc50.png" border="0" name="submit" title="Make a Paulo's Points Donation today through PayPal!" alt="Donate with PayPal button" />
 <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
 </form>
